# ClickerGame

./: CMakeLists.txt  README.md  clickergame.cpp  clickergame.h  main.cpp  main.qml  qml.qrc  ranking.cpp  ranking.h
